--- a/css/estilo.css
+++ b/css/estilo.css
@@ -88,33 +88,33 @@ header nav ul li a {
     border-radius: 146px;
 }
 
-/* MAIN */
+/* MAIN INDEX */
 
-main {
+.indexMain {
     display: flex;
     flex-direction: column;
     max-width: 1440px;
 }
 
-main ul li {
+.indexMain ul li {
     display: flex;
     flex-direction: row;
 }
 
-main ul li h1 {
+.indexMain ul li h1 {
     margin: 1.5rem;
     padding: 2rem;
     background-color: var(--primary-light);
     border-radius: 146px;
 }
 
-main .divContainer {
+.indexMain .divContainer {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-main .divContainer div {
+.indexMain .divContainer div {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -124,17 +124,108 @@ main .divContainer div {
     border-radius: 69px;
 }
 
-main .divContainer div h1 {
+.indexMain .divContainer div h1 {
     margin-top: 3rem;
     text-align: center;
     font-size: 3rem;
 }
 
-main .divContainer div img {
+.indexMain .divContainer div img {
     justify-content: center;
     height: 10rem;
     border-radius: 66px;
 }
+
+/* MAIN LOGIN */
+
+.loginMain .divLoginBack {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5rem auto auto;
+}
+
+.loginMain .divLoginBack .divLogin {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem;
+    background-color: var(--primary-light);
+    width: 80%;
+    border-radius: 124px;
+    margin: 0 5rem 5rem 2rem;
+}
+
+.loginMain .divLoginBack .divLogin .loginForm {
+    background-color: var(--secondary);
+    padding: 2rem 5rem 5rem;
+    border-radius: 79px;
+    display: block;
+}
+
+.loginForm div {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
+
+.loginForm #bonequinho {
+    justify-content: center;
+    align-items: center;
+}
+
+.loginForm #bonequinho img {
+    width: 50%;
+}
+
+.loginForm div input {
+    padding: 1rem 2rem;
+    margin: 0.5rem 0;
+    border: 0;
+    background-color:#F49300B5;
+    border-radius: 119px;
+}
+
+.loginMain .divLoginBack picture { 
+    flex-direction: column;  
+    margin-left: 1.5rem;
+    width: 8%;
+}
+
+.loginForm #botao {
+    justify-content: center;
+}
+
+.loginForm div button {
+    background-color: #F49300B5;
+    border: 0;
+    padding: 1rem 3rem;
+    border-radius: 119px;
+    margin: 0 2rem;
+}
+
+.loginForm ul {
+    list-style: none;
+    margin-top: 0.3rem;
+}
+
+.loginForm ul li {
+    padding: 0.5rem 0;
+}
+
+.loginForm ul li a {
+    text-decoration: none;
+    color: var(--primary);
+    font-size: 1.5;
+}
+
+.loginMain picture img {
+    padding: 0.5rem;
+}
+
+
+
+/* FOOTER */
 
 footer {
     background-color: var() ;
